Fixed spacing across slides

--- a/css/theme/blue.css
+++ b/css/theme/blue.css
@@ -208,7 +208,7 @@ body {
 .reveal small {
   display: inline-block;
   font-size: 0.6em;
-  line-height: 1.2em;
+  line-height: 1.0em;
   vertical-align: top; }
 
 .reveal small * {
